[Results] Fix stat alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -70,14 +70,14 @@
 
     .result-scent span {
       display: inline-block;
-      padding-left: 2.7em;
+      padding-left: 3.7em;
       background: transparent image-url("scent_icon.png") left center no-repeat;
       background-size: 2.5em;
       line-height: 2.5em;
     }
     .result-count span {
       display: inline-block;
-      padding-left: 2.7em;
+      padding-left: 3.7em;
       background: transparent image-url("count_icon.png") left center no-repeat;
       background-size: 2.5em;
       line-height: 2.5em;
